syntax = "proto3";
package pb;
option go_package = "github.com/airlangga-hub/microservices/services/account/pb";

message Account {
    int32 id = 1;
    string name = 2;
}

message PostAccountRequest {
    string name = 1;
}

message PostAccountResponse {
    Account account = 1;
}

message GetAccountRequest {
    int32 id = 1;
}

message GetAccountResponse {
    Account account = 1;
}

message GetAccountsRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message GetAccountsResponse {
    repeated Account accounts = 1;
}

service AccountService {
    rpc PostAccount(PostAccountRequest) returns (PostAccountResponse);
    rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
    rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse);
}