syntax = "proto3";
package pb;

option go_package = "github.com/airlangga-hub/microservices/services/catalog/pb";

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message PostProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
}

message PostProductResponse {
    Product product = 1;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message GetProductsRequest {
    int32 offset = 1;
    int32 limit = 2;
    repeated string ids = 3;
    string query = 4;
}

message GetProductsResponse {
    repeated Product products = 1;
}

service CatalogService {
    rpc PostProduct(PostProductRequest) returns (PostProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
}